content/vault/v1.12.x/content/docs/configuration/ui.mdx
---
layout: docs
page_title: UI - Configuration
description: |-
  Vault features a user interface (web interface) for interacting with Vault.
  Easily create, read, update, and delete secrets, authenticate, unseal, and
  more with the Vault UI.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-09-27T00:00:00.000Z
last_modified: 2023-09-27T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Vault UI

Vault features a user interface (web interface) for interacting with Vault.
Easily create, read, update, and delete secrets, authenticate, unseal, and
more with the Vault UI.

-> The UI requires **Vault 0.10 or higher** or Vault Enterprise.

## Activating the Vault UI

The Vault UI is not activated by default. To activate the UI, set the `ui`
configuration option in the Vault server configuration. Vault clients do not
need to set this option, since they will not be serving the UI.

```hcl
ui = true

listener "tcp" {
  # ...
}
```

For more information, please see the
[Vault configuration options](/vault/docs/configuration).

## Accessing the Vault UI

The UI runs on the same port as the Vault listener. As such, you must configure
at least one `listener` stanza in order to access the UI.

```hcl
listener "tcp" {
  address = "10.0.1.35:8200"

  # If bound to localhost, the Vault UI is only
  # accessible from the local machine!
  # address = "127.0.0.1:8200"
}
```

In this case, the UI is accessible at the following URL from any machine on the
subnet (provided no network firewalls are in place):

```text
https://10.0.1.35:8200/ui/
```

It is also accessible at any DNS entry that resolves to that IP address, such as
the Consul service address (if using Consul):

```text
https://vault.service.consul:8200/ui/
```

### Note on TLS

When using TLS (recommended), the certificate must be valid for all DNS entries
you will be accessing the Vault UI on, and any IP addresses on the SAN. If you
are running Vault with a self-signed certificate, any browsers that access the
Vault UI will need to have the root CA installed. Failure to do so may result in
the browser displaying a warning that the site is "untrusted". It is highly
recommended that client browsers accessing the Vault UI install the proper CA
root for validation to reduce the chance of a MITM attack.

### Note on UI token renewal

The Vault UI does not provide a configurable session timeout. Instead, the GUI uses
a built-in timeout based on your token's time-to-live (TTL) or lease duration (your
authentication method type determines whether Vault sets TTL or lease duration).

The Vault UI automatically renews your token at half of its TTL or lease duration,
whichever Vault sets. After three minutes of inactivity, which starts after your last
request to the Vault API, the GUI stops renewing your token.
The GUI then lets your token expire when it reaches its TTL or lease duration.
Auto-renewal resumes when you make another request to the Vault API.

For example, assume your token TTL is 10 minutes. If you become inactive at minute 1,
the Vault UI stops renewing your token at minute 4. Your token expires at minute 10, and the
session times out. You cannot interact with the GUI until you re-authenticate.
If you make another request to the API, such as navigating to a new page, the GUI resumes
auto-renewal and resets the three-minute inactivity timer.

Completing a form does not always trigger API calls. If you spend a long time filling out
a form, the GUI may stop renewing your token even though you are technically interacting
with the UI.

Vault does not provide an explicit user-configurable session timeout. If this feature
would benefit your organization, contact your account team.